--- a/frontend/src/app/property/property.component.html
+++ b/frontend/src/app/property/property.component.html
@@ -1,7 +1,7 @@
 <div class="property-container">
   <div class="top">
     <button mat-button (click)="nazad()" style="font-size: 20px;">
-      <mat-icon>arrow_back</mat-icon> Nazad
+      <mat-icon>arrow_back</mat-icon> {{'backToHome' |transloco}}
     </button>
   </div>
   <!-- Property Name -->
@@ -31,32 +31,32 @@
       </a>
     </div>
   </div>
-
+<div class="cont">
   <!-- Property Details -->
   <div *ngIf="property" class="property-details">
     <div class="row">
       <div class="col-md-6 mb-3">
-        <h5 style="font-size: 18px; font-weight:600;">Address</h5>
+        <h5 style="font-size: 18px; font-weight:600;">{{'address'|transloco}}</h5>
         <p style="font-size: 15px;">{{ property.adress }}</p>
       </div>
       <div class="col-md-6 mb-3">
-        <h5 style="font-size: 18px; font-weight:600;">City</h5>
+        <h5 style="font-size: 18px; font-weight:600;">{{'city'|transloco}}</h5>
         <p style="font-size: 15px;">{{ property.city?.name }}, {{ property.city?.country?.name }}</p>
       </div>
       <div class="col-md-6 mb-3">
-        <h5 style="font-size: 18px; font-weight:600;">Number of Rooms</h5>
+        <h5 style="font-size: 18px; font-weight:600;">{{'numberOfRooms'|transloco}}</h5>
         <p style="font-size: 15px;">{{ property.numberOfRooms }}</p>
       </div>
       <div class="col-md-6 mb-3">
-        <h5 style="font-size: 18px; font-weight:600;">Number of Bathrooms</h5>
+        <h5 style="font-size: 18px; font-weight:600;">{{'numberOfBathrooms'|transloco}}</h5>
         <p style="font-size: 15px;">{{ property.numberOfBathrooms }}</p>
       </div>
       <div class="col-md-6 mb-3">
-        <h5 style="font-size: 18px; font-weight:600;">Price Per Night</h5>
+        <h5 style="font-size: 18px; font-weight:600;">{{'pricePerNight'|transloco}}</h5>
         <p style="font-size: 15px;">{{ property.pricePerNight }} KM</p>
       </div>
       <div class="col-md-6 mb-3">
-        <h5 style="font-size: 18px; font-weight:600;">Property Type</h5>
+        <h5 style="font-size: 18px; font-weight:600;">{{'propertyType'|transloco}}</h5>
         <p style="font-size: 15px;">{{ property.propertyType.name }}</p>
       </div>
     </div>
@@ -70,12 +70,12 @@
         <div class="card">
           <div class="card-header">
             <h1 style="margin: 10px 0 0 15px;">{{ property.pricePerNight }} KM </h1>
-            <span style="margin: 10px 0 0 15px; font-size: 16px;">per night</span>
+            <span style="margin: 10px 0 0 15px; font-size: 16px;">{{'perNight'|transloco}}</span>
           </div>
           <div class="card-body">
             <div class="row">
               <mat-form-field class="rounded-form-field">
-                <mat-label>Check in - Check out</mat-label>
+                <mat-label>{{'checkInCheckOut'|transloco}}</mat-label>
                 <mat-date-range-input [rangePicker]="picker" (dateRangeChange)="calculateNightsAndTotalPrice()">
                   <input matStartDate [(ngModel)]="checkinDate" placeholder="Start date" (ngModelChange)="calculateNightsAndTotalPrice()">
                   <input matEndDate [(ngModel)]="checkoutDate" placeholder="End date" (ngModelChange)="calculateNightsAndTotalPrice()">
@@ -85,7 +85,7 @@
               </mat-form-field>
             </div>
             <div class="form-group">
-              <label style="font-size: 16px; float: left;" for="guests">Guests</label>
+              <label style="font-size: 16px; float: left;" for="guests">{{'guests'|transloco}}</label>
               <select class="form-control" id="guests" [(ngModel)]="guests">
                 <option value="1">1 guest</option>
                 <option value="2">2 guests</option>
@@ -93,16 +93,16 @@
               </select>
             </div>
             <div class="form-group">
-              <label style="font-size: 16px; float: left;" for="paymentMethods">Payment methods</label>
+              <label style="font-size: 16px; float: left;" for="paymentMethods">{{'paymentMethod'|transloco}}</label>
               <select class="form-control" id="paymentMethods" [(ngModel)]="paymentMethods">
-                <option value="1">Credit Card</option>
-                <option value="2">Cash</option>
+                <option value="1">{{'creditCard'|transloco}}</option>
+                <option value="2">{{'cash'|transloco}}</option>
               </select>
             </div>
-            <button class="btn btn-primary btn-block"  (click)="reserve()">Reserve</button>
+            <button class="btn btn-primary btn-block"  (click)="reserve()">{{'reserve'|transloco}}</button>
             <div class="row mt-3">
               <div class="col-md-6" style="font-size: 16px;">
-                KM {{pricePerNight}} x {{ nights }} nights
+                KM {{pricePerNight}} x {{ nights }} {{'nights'|transloco}}
               </div>
               <div class="col-md-6 text-right" style="font-size: 16px;">
                 {{ (pricePerNight * nights) | number }} KM
@@ -114,7 +114,7 @@
             <hr>
             <div class="row">
               <div class="col-md-6" style="font-size: 16px;">
-                Total price:
+                {{'totalPrice'|transloco}}:
               </div>
               <div class="col-md-6 text-right" style="font-weight: 600; font-size: 16px;"> {{ totalPrice | number }} KM
               </div>
@@ -123,6 +123,8 @@
         </div>
       </div>
     </div>
+
+  </div>
   </div>
 
 
