--- a/frontend/src/app/twofa-page/twofa-page.component.html
+++ b/frontend/src/app/twofa-page/twofa-page.component.html
@@ -1,22 +1,22 @@
 
-<section id="2flogin">
+<section id="flogin">
   <div class="card text-bg-dark mb-3 custom-card">
 
     <div class="card-header d-flex justify-content-between align-items-center">
-      <h5 class="mb-0">Two Factor Authentication</h5>
+      <h5 class="mb-0">{{'2fa'|transloco}}</h5>
       <button type="button" class="btn-close" aria-label="Close" (click)="dialogRef.close()"></button>
     </div>
 
     <div class="card-body d-flex flex-column justify-content-center align-items-center">
-      <input name="verifikacijskiKod" type="text" class="form-control mb-2" id="inlineFormInputName" [(ngModel)]="verifikacijskiKod" placeholder="Authentication Key">
-      <button type="button" class="btn btn-light mb-2" (click)="provjeriKod()">Unlock</button>
+      <input name="verifikacijskiKod" type="text" class="form-control mb-2" id="inlineFormInputName" [(ngModel)]="verifikacijskiKod"  [placeholder]="'authKey' | transloco">
+      <button type="button" class="btn btn-light mb-2" (click)="provjeriKod()">{{'unlock'|transloco}}</button>
 
       <div *ngIf="uspjesnaVerifikacija" class="alert alert-success mt-2" role="alert">
-        Verification successful!
+        {{'verificationSuccessful!'|transloco}}
       </div>
 
       <div *ngIf="neuspjesnaVerifikacija" class="alert alert-danger mt-2" role="alert">
-        Verification failed
+        {{'verificationFailed'|transloco}}
       </div>
     </div>
   </div>
