added reservations and reviews to the user-profile component

--- a/frontend/src/app/property/property.component.css
+++ b/frontend/src/app/property/property.component.css
@@ -42,6 +42,10 @@
   font-size: 2.5rem;
   color: #333;
 }
+.property-name{
+  display:flex;
+  align-items: flex-start;
+}
 
 .property-container {
   max-width: 1200px;
